search engine roxing

--- a/client/templates/search/search_template.html
+++ b/client/templates/search/search_template.html
@@ -1,5 +1,5 @@
 <template name='search'>
-  <div class="ui main text container">
+  <div class="ui main container">
     <form id="search">
       <div class="ui large fluid icon input">
         <input type="text" placeholder="Commerce, ville, cp" id="searchQuery" value="{{searchQuery}}">
