--- a/client/templates/_comons/header/header_template.html
+++ b/client/templates/_comons/header/header_template.html
@@ -1,10 +1,10 @@
 <template name='header'>
-  <div class="ui top fixed menu borderless green inverted">
+  <div class="ui top fixed menu borderless blue inverted">
     <div class="left item" data-action="sidebar">
       <i class="big sidebar icon"></i>
     </div>
     <div class="center header item" data-action="goHome">
-      <h1>mes avoirs</h1>
+      <h1>allofid</h1>
     </div>
     {{#unless isConnected}}
     <div class="right item" data-action="signIn">
