--- a/client/templates/imageEdit/imageEdit_template.html
+++ b/client/templates/imageEdit/imageEdit_template.html
@@ -3,11 +3,18 @@
     <input type="file" name="imageFile" class="hidden" id="imageFile">
   </form>
   {{#if imageId}}
-    <button class="ui right floated basic red icon button" data-action="deleteImage">
-      <i class="big remove icon"></i>
+    <button class="ui right floated circular basic red icon button" data-action="deleteImage">
+      <i class="large icons">
+        <i class="picture icon"></i>
+        <i class="corner grey remove icon"></i>
+      </i>
+    </button>
+  {{else}}
+    <button class="ui right floated circular basic green icon button" data-action="uploadImage">
+      <i class="large icons">
+        <i class="picture icon"></i>
+        <i class="corner grey add icon"></i>
+      </i>
     </button>
   {{/if}}
-  <button class="ui right floated basic green icon button" data-action="uploadImage">
-    <i class="big picture icon"></i>
-  </button>
 </template>
