--- a/client/templates/loyaltyCards/loyaltyCards_template.html
+++ b/client/templates/loyaltyCards/loyaltyCards_template.html
@@ -1,29 +1,67 @@
 <template name='loyaltyCards'>
   <div class="ui container">
     <h2>Mes cartes de fidélité</h2>
-    <div class="ui relaxed divided list">
-      {{#each loyaltyCards}}
-      <div class="item">
-        <i class="large yellow star icon"></i>
-        <div class="content">
-          <a class="header" href="{{pathFor 'place' placeId=placeId}}">{{name}}</a>
-          <div class="description">
-            {{points}} / {{size}} point{{#if greaterThan size 1}}s{{/if}}<br>
-            Mise à jour {{#if updatedAt}}{{fromNow updatedAt}}{{else}}{{fromNow createdAt}}{{/if}}
+
+    <div class="ui top attached tabular menu" id="loyaltyTabs">
+      <a class="active fluid item" data-tab="allofid">allofid</a>
+      <a class="right fluid item" data-tab="private">personnelles</a>
+    </div>
+    <div class="ui bottom attached tab basic segment active" data-tab="allofid">
+      <div class="ui relaxed divided list">
+        {{#each loyaltyCards}}
+        <div class="item">
+          <i class="large yellow star icon"></i>
+          <div class="content">
+            <a class="header" href="{{pathFor 'place' placeId=placeId}}">{{name}}</a>
+            <div class="description">
+              {{points}} / {{size}} point{{#if greaterThan size 1}}s{{/if}}<br>
+              Mise à jour {{#if updatedAt}}{{fromNow updatedAt}}{{else}}{{fromNow createdAt}}{{/if}}
+            </div>
           </div>
         </div>
+        {{else}}
+        <div class="ui basic center aligned segment">
+          <h2 class="ui icon header">
+            <i class="yellow star icon"></i>
+            <div class="content">
+              Vous n'avez pas encore de cartes de fidélité
+              <div class="sub header">Cherchez l'affichette <strong>mesavoirs.fr</strong> dans vos commerces habituels ou parlez en à votre commerçant. Merci ツ</div>
+            </div>
+          </h2>
+        </div>
+        {{/each}}
       </div>
-      {{else}}
-      <div class="ui basic center aligned segment">
-        <h2 class="ui icon header">
-          <i class="yellow star icon"></i>
-          <div class="content">
-            Vous n'avez pas encore de cartes de fidélité
-            <div class="sub header">Cherchez l'affichette <strong>mesavoirs.fr</strong> dans vos commerces habituels ou parlez en à votre commerçant. Merci ツ</div>
-          </div>
-        </h2>
-      </div>
-      {{/each}}
     </div>
+    <div class="ui bottom attached tab basic segment" data-tab="private">
+      <div class="ui relaxed divided list">
+        {{#each privateLoyaltyCards}}
+        <div class="item">
+          <i class="large yellow star icon"></i>
+          <div class="content">
+            <a class="header" href="{{pathFor 'card' cardId=_id}}">{{name}}</a>
+            <div class="description">
+              {{code}} ({{format}})<br>
+              Mise à jour {{#if updatedAt}}{{fromNow updatedAt}}{{else}}{{fromNow createdAt}}{{/if}}
+            </div>
+          </div>
+        </div>
+        {{else}}
+        <div class="ui basic center aligned segment">
+          <h2 class="ui icon header">
+            <i class="yellow star icon"></i>
+            <div class="content">
+              Vous n'avez pas encore ajouté de cartes de fidélité personelles
+              <div class="sub header">allofid vous permet de dématerialiser vos cartes de fidélité en les scannant.</div>´
+            </div>
+            <p>
+              <a href="{{pathFor 'addCard'}}" class="ui button">Ajouter une carte de fidélité</a>
+            </p>
+          </h2>
+        </div>
+        {{/each}}
+      </div>
+    </div>
+
+
   </div>
 </template>
