--- a/client/templates/scanned/scanned_template.html
+++ b/client/templates/scanned/scanned_template.html
@@ -1,65 +1,98 @@
 <template name='scanned'>
   <div class="ui container">
-    {{#if isInRole 'owners'}}
-      <h4>Commerce</h4>
-      <select class="fluid ui dropdown" id="place" tabindex="0">
-        {{#each myPlaces}}
-        <option value="{{_id}}" {{selectedPlace}}>{{name}}</option>
-        {{/each}}
-      </select>
+    {{#if equals scanType 'userId'}}
+    {{#if myPlaces}}
+      {{#if isInRole 'owners'}}
+        <h4>Commerce</h4>
+        <select class="fluid ui dropdown" id="place" tabindex="0">
+          {{#each myPlaces}}
+          <option value="{{_id}}" {{selectedPlace}}>{{name}}</option>
+          {{/each}}
+        </select>
 
-      {{#if place.customers}}
-      <h4>Clients</h4>
-      <select id="customer" name="customer" class="fluid ui dropdown">
-        <option value="">Selectionnez un client</option>
-        {{#each place.customers}}
-          <option value="{{customerId}}" {{selectedCustomer}}>{{email}}</option>
-        {{/each}}
-      </select>
-      {{/if}}
-      {{#if customerEmail}}
-      <h3><i class="blue pointing right icon"></i> {{customerEmail}}</h3>
-      {{/if}}
-      <h4>Avoir</h4>
-      <div class="ui fluid left icon action input">
-        <i class="euro icon"></i>
-        <input type="number" step="any" placeholder="Montant" tabindex="1" id="voucherValue" size="3">
-        <button class="ui green button" id="giveVoucher">
-          Donner
-        </button>
-        <button class="ui red button" id="takeVoucher">
-          Prendre
-        </button>
-      </div>
-      <p>
-        <div class="ui horizontal list">
-        {{#each vouchers}}
-          <div class="item" id="useVoucher">
-            <i class="large teal money icon"></i>
-            <div class="content">
-              <div class="header">{{formatMoney value}}</div>
-              Mis à jour {{#if updatedAt}}{{fromNow updatedAt}}{{else}}{{fromNow createdAt}}{{/if}}
+        {{#if place.customers}}
+        <h4>Clients</h4>
+        <select id="customer" name="customer" class="fluid ui dropdown">
+          <option value="">Selectionnez un client</option>
+          {{#each place.customers}}
+            <option value="{{customerId}}" {{selectedCustomer}}>{{email}}</option>
+          {{/each}}
+        </select>
+        {{/if}}
+        {{#if customerEmail}}
+          <h3><i class="blue pointing right icon"></i> {{customerEmail}}</h3>
+        {{/if}}
+        <h4>Son avoir</h4>
+        <div class="ui fluid left icon action input">
+          <i class="euro icon"></i>
+          <input type="number" step="any" placeholder="Montant" tabindex="1" id="voucherValue" size="3">
+          <button class="ui green button" id="giveVoucher">
+            Donner
+          </button>
+          <button class="ui red button" id="takeVoucher">
+            Prendre
+          </button>
+        </div>
+        <p>
+          <div class="ui horizontal list">
+          {{#each vouchers}}
+            <div class="item" id="useVoucher">
+              <i class="large teal money icon"></i>
+              <div class="content">
+                <div class="header">{{formatMoney value}}</div>
+                Mis à jour {{#if updatedAt}}{{fromNow updatedAt}}{{else}}{{fromNow createdAt}}{{/if}}
+              </div>
+            </div>
+          {{/each}}
+          </div>
+        </p>
+        {{#if place.loyaltyCard.enabled}}
+          <h4>Sa carte de fidélité</h4>
+          <div class="fluid ui left labeled big button" tabindex="2">
+            <a class="ui basic label">
+              <i class="yellow star icon"></i> {{userPoints}} / {{place.loyaltyCard.size}} points
+            </a>
+            <div class="ui olive button" id="addOnePoint">
+               +1 point
             </div>
           </div>
-        {{/each}}
-        </div>
-      </p>
-      {{#if place.loyaltyCard.enabled}}
-      <h4>Carte de fidélité</h4>
-      <div class="fluid ui left labeled big button" tabindex="2">
-        <a class="ui basic label">
-          <i class="yellow star icon"></i> {{userPoints}} / {{place.loyaltyCard.size}} points
-        </a>
-        <div class="ui olive button" id="addOnePoint">
-           +1 point
-        </div>
-      </div>
-      {{#if loyaltyCardDate}}<i class="time icon"></i> Mise à jour {{fromNow loyaltyCardDate}}<br>{{/if}}
-      <p>
-        Chaque tranche d'achat de {{formatMoney place.loyaltyCard.pointCost}} ajoute 1 point à la carte de fidélité.<br>
-        Quand la carte atteint {{place.loyaltyCard.size}} points, votre client reçoit automatiquement un avoir de {{formatMoney place.loyaltyCard.voucherValue}} et le compte de points est remis a zéro.
-      </p>
+          {{#if loyaltyCardDate}}<i class="time icon"></i> Mise à jour {{fromNow loyaltyCardDate}}<br>{{/if}}
+          <p>
+            Chaque tranche d'achat de {{formatMoney place.loyaltyCard.pointCost}} ajoute 1 point à la carte de fidélité.<br>
+            Quand la carte atteint {{place.loyaltyCard.size}} points, votre client reçoit automatiquement un avoir de {{formatMoney place.loyaltyCard.voucherValue}} et le compte de points est remis a zéro.
+          </p>
+        {{/if}}
       {{/if}}
+    {{else}}
+    <div class="ui basic center aligned segment">
+      <h2 class="ui icon header">
+        <i class="green add user icon"></i>
+        <div class="content">
+          Vous avez scanné quelqu'un
+          <div class="sub header">Mais vous n'avez pas enregistré votre commerce</div>
+        </div>
+      </h2>
+      <p>
+        <a class="ui button" href="{{pathFor 'createPlace'}}">Inscrivez votre commerce</a>
+      </p>
+      {{> loginText}}
+    </div>
+    {{/if}}
+    {{else}}
+    <div class="ui basic center aligned segment">
+      <h2 class="ui icon header">
+        <i class="green barcode icon"></i>
+        <div class="content">
+          Vous avez scanné un code au format {{scanType}}
+          <div class="sub header">Sa valeur est {{scanId}}</div>
+        </div>
+      </h2>
+      <p>
+        C'est une de vos cartes de fidélité à enregistrer ?
+        <button id="addThisCard" class="ui positive button">Ajouter cette carte</button>
+      </p>
+      {{> loginText}}
+    </div>
     {{/if}}
   </div>
 </template>
