--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -10,8 +10,8 @@
       <h2 class="ui icon header">
         <i class="teal money icon" data-action="vouchers"></i>
         <div class="content">
-          Gérez vos avoirs et vos cartes de fidélité
-          <div class="sub header">Pour ne plus avoir de petits papiers ni de cartes perdus dans votre porte monnaie.</div>
+          Gérez vos cartes de fidélité et vos avoirs
+          <div class="sub header">Pour ne plus avoir de de cartes ni petits papiers perdus dans votre porte monnaie.</div>
         </div>
       </h2>
       {{> loginText}}
