monday morning sprint

--- a/client/templates/_comons/sidebar/sidebar_template.html
+++ b/client/templates/_comons/sidebar/sidebar_template.html
@@ -33,12 +33,16 @@
       C. Fidélité
     </a>
     <a class="item {{isActiveRoute 'vouchers'}}" href="{{pathFor 'vouchers'}}">
-      <i class="money icon"></i>
+      <i class="ticket icon"></i>
       Avoirs
     </a>
     <a class="item {{isActiveRoute 'calc'}}" href="{{pathFor 'calc'}}">
       <i class="calculator icon"></i>
       Calc.
+    </a>
+    <a class="item {{isActiveRoute 'about'}}" href="{{pathFor 'about'}}">
+      <i class="question icon"></i>
+      À propos
     </a>
   </div>
 </template>
