--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -1,3 +1,34 @@
 <template name='about'>
-
+  <div class="ui main container">
+    <div class="ui basic segment">
+      <h2 class="ui header">à propos d'allofid</h2>
+      <p class="ui justified text">
+        C'est une application qui permet de gérer les cartes de fidélité et les avoirs.
+      </p>
+      <p class="ui justified text">
+        Certain commerces autours de vous l'utilisent pour ajouter des points sur les cartes de fidélités de leurs clients. Un avoir est automatiquement remis quand la carte est remplie.
+      </p>
+      <p class="ui justified text">
+        Les commerçants peuvent aussi l'utiliser pour rendre la monnaie sur les tickets restaurant.
+      </p>
+      <p class="ui justified text">
+        Avec allofid, fini les porte monnaie surchargé.
+      </p>
+      <p class="ui justified text">
+        Vous pouvez scanner vos cartes personnelles. Nous les stockons dans le cloud en toute sécurité.
+      </p>
+      <p class="ui justified text">
+        Vous pouvez aussi gérer vos cartes et vos avoirs sur <a href="allofid.com">allofid.com</a>
+      </p>
+    </div>
+    <div class="ui basic segment">
+      <h2 class="ui icon header">
+        <i class="blue ticket icon"></i>
+        <div class="content">
+          Cherchez les affiches <strong>allofid</strong>
+          <div class="sub header">autour de vous ou parlez en à vos commerçants favoris.<br>Merci ツ</div>
+        </div>
+      </h2>
+    </div>
+  </div>
 </template>
