--- a/client/templates/calc/calc_template.html
+++ b/client/templates/calc/calc_template.html
@@ -13,7 +13,7 @@
         <div class="field">
           <label for="ticketValue">Montant du ticket</label>
           <div class="ui right labeled left icon large input">
-            <i class="money icon"></i>
+            <i class="ticket icon"></i>
             <input type="number" step="any" placeholder="Montant du ticket" id="ticketValue">
             <div class="ui label"><i class="euro icon"></i></div>
           </div>
