--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -8,24 +8,24 @@
     </form>
     <div class="ui basic center aligned segment">
       <h2 class="ui icon header">
-        <i class="teal money icon" data-action="vouchers"></i>
+        <i class="yellow star icon" data-action="loyaltyCards"></i>
         <div class="content">
           Gérez vos cartes de fidélité et vos avoirs
-          <div class="sub header">Pour ne plus avoir de de cartes ni petits papiers perdus dans votre porte monnaie.</div>
+          <div class="sub header">Pour ne plus colectionner les cartes de fidelité, ni les petits papiers dans votre porte monnaie.</div>
         </div>
       </h2>
       {{> loginText}}
     </div>
     <div class="ui raised center aligned segment">
       <h2 class="ui icon header">
-        <i class="yellow star icon" data-action="loyaltyCards"></i>
+        <i class="blue ticket icon" data-action="vouchers"></i>
         <div class="content">
           Utilisez notre service pour votre commerce
           <div class="sub header">C'est gratuit pour toujours.</div>
         </div>
       </h2>
       <p>
-        <button class="ui button" data-action="createPlace">Inscrivez votre commerce</button>
+        <button class="ui button positive" data-action="createPlace">Inscrivez votre commerce</button>
       </p>
     </div>
   </div>
