--- a/client/templates/addCard/addCard_template.html
+++ b/client/templates/addCard/addCard_template.html
@@ -1,6 +1,6 @@
 <template name='addCard'>
   <div class="ui container">
-    <h2>Enregistrez votre carte de fidélité</h2>
+    <h2>Ajoutez une de vos cartes de fidélité</h2>
     {{#if isMobile}}
     <button id="scanCard" class="ui fluid button">Scanner la carte</button>
     {{/if}}
