--- a/client/templates/vouchers/vouchers_template.html
+++ b/client/templates/vouchers/vouchers_template.html
@@ -4,7 +4,7 @@
     <div class="ui relaxed divided list">
       {{#each vouchers}}
       <div class="item">
-        <i class="large teal money icon"></i>
+        <i class="large blue ticket icon"></i>
         <div class="content">
           <a class="header" href="{{pathFor 'place' placeId=placeId}}">{{name}}</a>
           <div class="description">{{formatMoney value}}</div>
@@ -14,7 +14,7 @@
       {{else}}
       <div class="ui basic center aligned segment">
         <h2 class="ui icon header">
-          <i class="teal money icon"></i>
+          <i class="blue ticket icon"></i>
           <div class="content">
             Vous n'avez pas encore d'avoirs
             <div class="sub header">Cherchez l'affichette <strong>mesavoirs.fr</strong> dans vos commerces habituels ou parlez en à votre commerçant. Merci ツ</div>
