monday morning sprint bis

--- a/client/templates/_comons/footer/footer_template.html
+++ b/client/templates/_comons/footer/footer_template.html
@@ -1,7 +1,7 @@
 <template name='footer'>
   <!-- <div class="ui bottom borderless menu">
     <div class="header item">
-      mesavoirs.fr
+      allofid
     </div>
     <a class="item">
       CGU
