--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -21,7 +21,7 @@
         Vous pouvez aussi gérer vos cartes et vos avoirs sur <a href="allofid.com">allofid.com</a>
       </p>
     </div>
-    <div class="ui basic segment">
+    <div class="ui basic center alligned segment">
       <h2 class="ui icon header">
         <i class="blue ticket icon"></i>
         <div class="content">
