monday morning sprint ter

--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -6,7 +6,7 @@
         C'est une application qui permet de gérer les cartes de fidélité et les avoirs.
       </p>
       <p class="ui justified text">
-        Certain commerces autours de vous l'utilisent pour ajouter des points sur les cartes de fidélités de leurs clients. Un avoir est automatiquement remis quand la carte est remplie.
+        Des commerces autours de vous l'utilisent pour ajouter des points sur les cartes de fidélités de leurs clients. Un avoir est automatiquement remis quand la carte est remplie.
       </p>
       <p class="ui justified text">
         Les commerçants peuvent aussi l'utiliser pour rendre la monnaie sur les tickets restaurant.
@@ -18,15 +18,15 @@
         Vous pouvez scanner vos cartes personnelles. Nous les stockons dans le cloud en toute sécurité.
       </p>
       <p class="ui justified text">
-        Vous pouvez aussi gérer vos cartes et vos avoirs sur <a href="allofid.com">allofid.com</a>
+        Vous pouvez aussi gérer vos cartes et vos avoirs sur <a href="http://allofid.com" target="blanck">allofid.com</a>
       </p>
     </div>
-    <div class="ui basic center alligned segment">
+    <div class="ui basic center aligned segment">
       <h2 class="ui icon header">
         <i class="blue ticket icon"></i>
         <div class="content">
-          Cherchez les affiches <strong>allofid</strong>
-          <div class="sub header">autour de vous ou parlez en à vos commerçants favoris.<br>Merci ツ</div>
+          Cherchez les affiches <strong>allofid</strong> autour de vous
+          <div class="sub header">ou parlez en à vos commerçants favoris. Merci ツ</div>
         </div>
       </h2>
     </div>
