monday morning after sleeping

--- a/client/templates/_comons/sidebar/sidebar_template.html
+++ b/client/templates/_comons/sidebar/sidebar_template.html
@@ -42,7 +42,7 @@
     </a>
     <a class="item {{isActiveRoute 'about'}}" href="{{pathFor 'about'}}">
       <i class="question icon"></i>
-      À propos
+      A propos
     </a>
   </div>
 </template>
