--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -1,24 +1,24 @@
 <template name='about'>
   <div class="ui main container">
     <div class="ui basic segment">
-      <h2 class="ui header">à propos d'allofid</h2>
+      <h2 class="ui header">A propos d'allofid</h2>
       <p class="ui justified text">
         C'est une application qui permet de gérer les cartes de fidélité et les avoirs.
       </p>
       <p class="ui justified text">
-        Des commerces autours de vous l'utilisent pour ajouter des points sur les cartes de fidélités de leurs clients. Un avoir est automatiquement remis quand la carte est remplie.
+        Les commerces peuvent utiliser allofid pour gérer les cartes de fidélités de leurs clients. Un avoir est automatiquement remis quand la carte est remplie.
       </p>
       <p class="ui justified text">
-        Les commerçants peuvent aussi l'utiliser pour rendre la monnaie sur les tickets restaurant.
+        Les commerçants peuvent aussi utiliser allofid pour rendre la monnaie sur les tickets restaurant.
       </p>
       <p class="ui justified text">
-        Avec allofid, fini les porte monnaie surchargé.
+        Avec allofid, fini le porte monnaie surchargé.
       </p>
       <p class="ui justified text">
-        Vous pouvez scanner vos cartes personnelles. Nous les stockons dans le cloud en toute sécurité.
+        Avec allofid, vous pouvez aussi scanner vos cartes personnelles. Nous les stockons dans le cloud en sécurité.
       </p>
       <p class="ui justified text">
-        Vous pouvez aussi gérer vos cartes et vos avoirs sur <a href="http://allofid.com" target="blanck">allofid.com</a>
+        Vous pouvez également gérer vos cartes et vos avoirs sur <a href="http://allofid.com" target="blanck">allofid.com</a>
       </p>
     </div>
     <div class="ui basic center aligned segment">
