--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -20,7 +20,7 @@
       <h2 class="ui icon header">
         <i class="blue ticket icon" data-action="vouchers"></i>
         <div class="content">
-          Utilisez notre service pour votre commerce
+          Utilisez allofid pour votre commerce
           <div class="sub header">C'est gratuit pour toujours.</div>
         </div>
       </h2>
