--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -3,23 +3,27 @@
     <div class="ui basic segment">
       <h2 class="ui header">A propos d'allofid</h2>
       <p class="ui justified text">
-        C'est une application qui permet de gérer les cartes de fidélité et les avoirs.
+        C'est une application qui permet de gérer vos cartes de fidélité et vos avoirs.
       </p>
-      <p class="ui justified text">
-        Les commerces peuvent utiliser allofid pour gérer les cartes de fidélités de leurs clients. Un avoir est automatiquement remis quand la carte est remplie.
-      </p>
-      <p class="ui justified text">
-        Les commerçants peuvent aussi utiliser allofid pour rendre la monnaie sur les tickets restaurant.
-      </p>
-      <p class="ui justified text">
-        Avec allofid, fini le porte monnaie surchargé.
-      </p>
-      <p class="ui justified text">
-        Avec allofid, vous pouvez aussi scanner vos cartes personnelles. Nous les stockons dans le cloud en sécurité.
-      </p>
-      <p class="ui justified text">
+      <h4 class="ui header">Pour les commerçants</h4>
+      <ul>
+        <li>Gérer les cartes de fidélité de vos clients</li>
+        <li>Rendre la monnaie des tickets restaurant sous forme d’avoirs</li>
+        <li>Proposer des promotions à vos clients</li>
+      </ul>
+      <h4 class="ui header">Pour les clients</h4>
+      <ul>
+        <li>Voir le nombre de points de vos cartes de fidélité allofid</li>
+        <li>Voir votre solde d'avoir pour chaque commerce</li>
+        <li>Ajoutez les cartes de fidélité que vous avez déjà</li>
+      </ul>
+      <p class="ui text">
         Vous pouvez également gérer vos cartes et vos avoirs sur <a href="http://allofid.com" target="blanck">allofid.com</a>
       </p>
+      <h4 class="ui center aligned header">
+        Avec allofid, fini le porte monnaie surchargé.
+      </h4>
+
     </div>
     <div class="ui basic center aligned segment">
       <h2 class="ui icon header">
