--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -11,7 +11,7 @@
         <i class="yellow star icon" data-action="loyaltyCards"></i>
         <div class="content">
           Gérez vos cartes de fidélité et vos avoirs
-          <div class="sub header">Pour ne plus colectionner les cartes de fidelité, ni les petits papiers dans votre porte monnaie.</div>
+          <div class="sub header">Pour ne plus collectionner les cartes de fidelité, ni les petits papiers dans votre porte monnaie.</div>
         </div>
       </h2>
       {{> loginText}}
