tuesday night is young

--- a/client/templates/_comons/sidebar/sidebar_template.html
+++ b/client/templates/_comons/sidebar/sidebar_template.html
@@ -1,5 +1,5 @@
 <template name='sidebar'>
-  <div class="ui left vertical inverted sidebar labeled icon menu">
+  <div class="ui left vertical inverted blue sidebar labeled icon menu">
     <a class="item {{isActiveRoute 'home'}}" href="{{pathFor 'home'}}">
       <i class="home icon"></i>
       Accueil
