--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -7,19 +7,16 @@
       </p>
       <h4 class="ui header">Pour les commerçants</h4>
       <ul>
-        <li>Gérer les cartes de fidélité de vos clients</li>
-        <li>Rendre la monnaie des tickets restaurant sous forme d’avoirs</li>
+        <li>Gérer les cartes de fidélité de vos clients depuis votre smartphone</li>
+        <li>Rendre la monnaie des tickets restaurant sous forme d’avoir</li>
         <li>Proposer des promotions à vos clients</li>
       </ul>
       <h4 class="ui header">Pour les clients</h4>
       <ul>
-        <li>Voir le nombre de points de vos cartes de fidélité allofid</li>
-        <li>Voir votre solde d'avoir pour chaque commerce</li>
-        <li>Ajoutez les cartes de fidélité que vous avez déjà</li>
+        <li>Rassembler toutes vos cartes de fidélité dans votre smartphone</li>
+        <li>Suivre le solde de points gagnés dans les commerces partenaires</li>
+        <li>Voir le montant de vos avoirs cumulés dans les commerces partenaires</li>
       </ul>
-      <p class="ui text">
-        Vous pouvez également gérer vos cartes et vos avoirs sur <a href="http://allofid.com" target="blanck">allofid.com</a>
-      </p>
       <h4 class="ui center aligned header">
         Avec allofid, fini le porte monnaie surchargé.
       </h4>
