tuesday morning fix

--- a/client/templates/myPlaces/myPlaces_template.html
+++ b/client/templates/myPlaces/myPlaces_template.html
@@ -21,6 +21,8 @@
         </a>
       {{/each}}
       </div>
+      <br>
+      <a href="{{pathFor 'createPlace'}}" class="ui fluid button">Ajouter un commerce</a>
     {{ else }}
     <div class="ui stacked center aligned segment">
       <h3>Commerçants, utilisez allofid.</h3>
