places ownership management

--- a/client/templates/owners/owners_template.html
+++ b/client/templates/owners/owners_template.html
@@ -7,6 +7,11 @@
     <div class="item" id="{{userId}}">{{email}}   <i class="red remove icon" id="remove"></i></div>
     {{/each}}
     </div>
+    <h4 class="ui header">Ajouter un propriétaire</h4>
+    <div class="ui action fluid input">
+      <input type="email" id="ownerMail" placeholder="Adresse email">
+      <button class="ui green icon button" id="searchOwner"><i class="search icon"></i></button>
+    </div>
   </div>
   {{/if}}
 </template>
