--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -13,9 +13,9 @@
       </ul>
       <h4 class="ui header">Pour les clients</h4>
       <ul>
-        <li>Rassembler toutes vos cartes de fidélité dans votre smartphone</li>
-        <li>Suivre le solde de points gagnés dans les commerces partenaires</li>
-        <li>Voir le montant de vos avoirs cumulés dans les commerces partenaires</li>
+        <li>Regrouper toutes vos cartes de fidélité dans votre smartphone en les scannant</li>
+        <li>Suivre le solde de points gagnés chez les commerçants partenaires</li>
+        <li>Voir le montant de vos avoirs cumulés chez les commerçants partenaires</li>
       </ul>
       <h4 class="ui center aligned header">
         Avec allofid, fini le porte monnaie surchargé.
