--- a/client/templates/contact/contact_template.html
+++ b/client/templates/contact/contact_template.html
@@ -3,7 +3,7 @@
     <h2 class="ui header">Contact</h2>
     {{#autoForm id="contact" type="insert" collection="Contacts" enctype="multipart/form-data" doc=this}}
       {{> afQuickField placeholder="schemaLabel" name="name"}}
-      {{> afQuickField placeholder="schemaLabel" name="email"}}
+      {{> afQuickField placeholder="schemaLabel" name="email" value=email}}
       {{> afQuickField placeholder="schemaLabel" name="subject"}}
       {{> afQuickField placeholder="schemaLabel" name="message"}}
       <button class="fluid ui positive button" type="submit">Envoyer</button>
